--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+--extra-index-url https://pypi.org/simple
+streamlit>=1.31.0
+altair==4.2.2
 pandas
 plotly
-streamlit
-altair==4.2.2
 gcsfs
 fsspec
