--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ pandas
 plotly
 streamlit>=1.31.0
 altair==4.2.2
-PyDrive2
-google-auth
 google-api-python-client
-httplib2
+google-auth-httplib2
+google-auth-oauthlib
