--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,7 @@
-
+[theme]
+primaryColor = "#FF4B4B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#31333F"
+font = "sans serif"
+base = "light" # This is the critical line to ignore dark mode
